# File-Organizer-and-Deduplicator

./: 1简单文件管理.py  File Organizer and Deduplicator.py  README.md  file_organizer_gui.py  gold_file_manager.py  hash-algorithms.md  media_collector_tk_improved.py  文件分类整理工具.py  文件整理.py  测试优化中，请勿使用等待优化完成.py  混乱文件整理.py  混乱文件整理_tkinter.py  简单人脸对比.py
rust/: Cargo.toml  文件整理.py  文件整理程序.rs
rust/src/: main.rs
